--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -1,3 +1,5 @@
+- @title = "About"
+
 %p Upside Down Academy is a work in progress.
 %p
   The site was created to help make it easier for educators everywhere
