--- a/app/views/lessons/edit.html.haml
+++ b/app/views/lessons/edit.html.haml
@@ -1,3 +1,5 @@
+- @title = "Editing #{@lesson.title} - #{@lesson.subject} > #{@lesson.specific_subject}"
+
 - if @lesson.title.present?
   = render "devise/registrations/short_form" if current_user.nil?
 
