--- a/app/assets/stylesheets/lessons.css.sass
+++ b/app/assets/stylesheets/lessons.css.sass
@@ -25,6 +25,17 @@
     padding: 12px
     ul
       margin: 0
+  .comments
+    padding-top: 30px
+    form, .comment
+      padding: 12px
+      border: 1px solid #ccc
+      background-color: white
+      margin-bottom: 12px
+      textarea
+        width: 600px
+        height: 120px
+
 
 .tip
   margin-bottom: 30px
