- tweaking for styles

--- a/app/assets/stylesheets/site.css.sass
+++ b/app/assets/stylesheets/site.css.sass
@@ -131,6 +131,9 @@ form
   .hinted
     color: #666
     width: 24em
+  select
+    option
+      margin: 6px 0
 
 #content_container
   overflow: hidden
