--- a/app/views/lessons/_lesson_header.html.haml
+++ b/app/views/lessons/_lesson_header.html.haml
@@ -1,15 +1,19 @@
 %p
+  %b General Subject:
   = link_to @lesson.subject, edit_lesson_path(@lesson, :edit_subject => 1)
-  - if @lesson.specific_subject.present?
-    \>
-    = link_to @lesson.specific_subject, edit_lesson_path(@lesson, :edit_subject => 1)
+%p
+  %b Specific Subject:
+  = link_to @lesson.specific_subject, edit_lesson_path(@lesson, :edit_subject => 1)
 
-- unless @lesson.title.blank?
-  %h2= link_to @lesson.title, edit_lesson_path(@lesson, :edit_title => 1)
+%p
+  %b Confidence Level: 
+  = link_to @lesson.confidence_text, edit_lesson_path(@lesson, :edit_confidence => 1)
 
-- unless @lesson.confidence_text.blank?
-  %p
-    %b Confidence Level: 
-    = link_to @lesson.confidence_text, edit_lesson_path(@lesson, :edit_confidence => 1)
+%p
+  %b Lesson Title:
+  = link_to_unless @lesson.title.blank?, @lesson.title, edit_lesson_path(@lesson, :edit_title => 1)
+
+%p.small
+  (click any of the information above to edit it)
 
 %br
