- tweaking about page

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -3,12 +3,15 @@
 %p Upside Down Academy is a work in progress.
 %p
   The site was created to help make it easier for educators everywhere
-  to make school more engaging on a number of levels.
+  to make education more engaging on a number of levels.
 %p
   It is designed to make it easy to turn any lesson in to project-based learning,
-  to encourage students to think empathetically and improve their communication skills.
-  I hope that the idea of helping other students, like themselves, learn more easily,
-  will be a better motivation then simply trying to memorize some material.
+  to encourage students to think empathetically, creatively, and improve their communication skills.
+%p
+  Trying to teach something you have just learned is a great way to challenge your
+  understanding of the material. By taking student efforts to teach and putting them online it not only
+  provides a wealth of "peer-tutoring" resources, but also gives students a greater sense
+  of impact: they're helping make life easier for their fellow students.
 
 %br
 %br
@@ -28,7 +31,7 @@
 %br
 %br
 
-%p An amazing education should be available to everyone, and it shouldn't require super-hero teachers.
+%p An amazing education should be available to everyone.
 %p This site is one step toward trying to help with that.
 
 %br
