- tweaking about page

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -10,7 +10,7 @@
 %p
   Trying to teach something you have just learned is a great way to challenge your
   understanding of the material. By taking student efforts to teach and putting them online it not only
-  provides a wealth of "peer-tutoring" resources, but also gives students a greater sense
+  creates a wealth of "peer-tutoring" resources, but also gives students a greater sense
   of impact: they're helping make life easier for their fellow students.
 
 %br
