- tweaking about page

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -26,7 +26,9 @@
   to attend schools every day for 15+ years that focus more on memorization
   than understanding, more on obedience rather than creativity, more on
   test-taking than on creating something of value... Well, the thought is not
-  one I can live with comfortably.
+  one I can live with comfortably. Again, I know many classrooms, teachers,
+  and schools exceed this description, but I truly believe there's no reason
+  that such an environment ever has to exist in a school.
 
 %br
 %br
