--- a/app/views/lessons/show.html.haml
+++ b/app/views/lessons/show.html.haml
@@ -35,9 +35,9 @@
 
     - @lesson.videos.each do |video|
       .video
+        %p.small.right= link_to("View&nbsp;larger&nbsp;video&nbsp;>".html_safe, lesson_video_path(@lesson, video), :class => "lightbox")
         %h4
-          = video.title
-          %span.small= link_to("View&nbsp;larger&nbsp;video&nbsp;>".html_safe, lesson_video_path(@lesson, video), :class => "lightbox")
+          = truncate(video.title, :length => 39)
         = render "videos/video", :video => video, :size => :medium
         .small= simple_format(video.caption)
 
