- tweaking home page

--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -1,6 +1,20 @@
+.for_who
+  overflow: hidden
+  .section
+    h2
+      margin-bottom: 0
+    float: left
+    border-right: 1px solid #ccc
+    padding-right: 12px
+    margin-right: 12px
+    width: 294px
+  .last
+    margin: 0
+    padding: 0
+    border: none
+
 .site_instructions
   font-size: 18pt
-  padding: 30px
   li
     margin-bottom: 12px
 
@@ -19,3 +33,8 @@
     td
       width: 33%
       vertical-align: top
+
+.separator
+  padding-top: 45px
+  margin-top: 45px
+  border-top: 1px solid #ccc
