--- a/app/views/about/for_students.html.haml
+++ b/app/views/about/for_students.html.haml
@@ -3,7 +3,8 @@
 %h2 Built By Students For Students
 
 %p
-  All of the lessons on Upside Down Academy are created by students trying to make life
+  All of the lessons on Upside Down Academy are created by students (as in someone who
+  is trying to learn - you don't have to be in school to be a student) trying to make life
   easier for their fellow students.
 
 %p
@@ -11,8 +12,7 @@
   make it easier for everyone else to learn.
 
 %p
-  Create your own lessons and help make life a little easier for students just like
-  you all around the world.
+  Create your own lessons and help make life a little easier for students all around the world.
 
 %p
   Just take what ever you are learning right now and think about how you would try
