--- a/app/views/about/for_teachers.html.haml
+++ b/app/views/about/for_teachers.html.haml
@@ -1,5 +1,14 @@
 - @title = "For Teachers"
 
+%h3 Learning By Teaching
+
+%p
+  It's said that the best way to learn is to try and teach.
+  When you try and teach something you quickly recognize the gaps
+  in your learning. You also are more likely to figure out the context
+  necessary to truly understand the material.
+
+%br
 %h3 Project Based Learning
 
 %p
