- tweaking home page

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -7,7 +7,7 @@
   .section
     %h2 For Students
     %p.small Can you find a way to make what you're learning easier / more fun for someone else to learn?
-    %p.small Just pretend your helping your younger sibling learn something. How would you do it?
+    %p.small Just pretend your helping you're younger sibling learn something. How would you do it?
     %p.small= link_to("Read more >", for_students_about_index_path)
   .section.last
     %h2 For Everyone
