- tweaking home page

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,13 +1,13 @@
 .for_who
   .section
     %h2 For Teachers
-    %p.small Have your students create lessons teaching others what they are learning.
-    %p.small The change from "learning" to "teaching" will help them better analyze their own learning
+    %p.small Have your students create lessons trying to teach others what you are teaching them.
+    %p.small The transition from "learning" to "teaching" can dramatically impact their learning and engagement.
     %p.small= link_to("Read more >", for_teachers_about_index_path)
   .section
     %h2 For Students
     %p.small Can you find a way to make what you're learning easier / more fun for someone else to learn?
-    %p.small Just pretend your helping you're younger sibling learn something. How would you do it?
+    %p.small Just pretend you're helping your younger sibling learn something. How would you do it?
     %p.small= link_to("Read more >", for_students_about_index_path)
   .section.last
     %h2 For Everyone
