- tweaking lesson status info

--- a/app/views/lessons/_status.html.haml
+++ b/app/views/lessons/_status.html.haml
@@ -3,7 +3,10 @@
   = @lesson.published_at.strftime("%m/%d/%Y")
 - elsif lesson_owner?(@lesson)
   %b Unpublished:
-  .publish_lesson
-    = form_for(@lesson) do |f|
-      = f.hidden_field :published_at, :value => Date.today
-      %a Publish lesson >
+  - if @lesson.body.present?
+    .publish_lesson
+      = form_for(@lesson) do |f|
+        = f.hidden_field :published_at, :value => Date.today
+        %a Publish lesson >
+  - else
+    Please add lesson text before publishing.
