- working on lesson creation flow

--- a/app/views/lessons/_form.html.haml
+++ b/app/views/lessons/_form.html.haml
@@ -159,7 +159,7 @@
       %p.small It's easier for people to scan/search text than to scan/search through a video.  
       = f.text_area :body, :class => "monitor_changes", :style => "width: 450px;"
 
-  .actions
+  .actions.clear
     - if @lesson.title.present?
       %p.text_center.small
         (Please remember to save often. We don't yet have a good way to recover your lesson if something goes wrong.)
