--- a/app/views/lessons/show.html.haml
+++ b/app/views/lessons/show.html.haml
@@ -30,8 +30,8 @@
     - if @lesson.videos.empty? && @lesson.photos.empty?
       %p No videos or images have been added to this lesson.
       - if lesson_owner?(@lesson)
-        = link_to("Add a video to your lesson >", new_lesson_video_path(@lesson), :class => "lightbox")
-        = link_to("Add a photo/image/drawing to your lesson >", new_lesson_photo_path(@lesson), :class => "lightbox")
+        %p= link_to("Add a video to your lesson >", new_lesson_video_path(@lesson), :class => "lightbox")
+        %p= link_to("Add a photo/image/drawing to your lesson >", new_lesson_photo_path(@lesson), :class => "lightbox")
 
     - @lesson.videos.each do |video|
       .video
