- working on lesson creation flow

--- a/app/assets/stylesheets/lessons.css.sass
+++ b/app/assets/stylesheets/lessons.css.sass
@@ -56,6 +56,8 @@
   background-color: #eee
   padding: 12px
   margin-bottom: 30px
+  li
+    padding: 6px 0
 
 .photos_and_videos_preview
   width: 390px
