--- a/app/views/devise/registrations/_short_form.html.haml
+++ b/app/views/devise/registrations/_short_form.html.haml
@@ -4,7 +4,7 @@
       %h3
         Please Register An Account Or
         = link_to("Log In", new_user_session_path)
-      %p Your lesson will not be saved until you register an account.
+      %p You must register an account to publish or edit your lesson.
       %table.registration_fields.small
         %tr
           %td
