--- a/app/views/lessons/edit.html.haml
+++ b/app/views/lessons/edit.html.haml
@@ -1,6 +1,6 @@
 - @title = "Editing #{@lesson.title} - #{@lesson.subject} > #{@lesson.specific_subject}"
 
-- if @lesson.title.present?
+- if @lesson.subject.present? && @lesson.title.present?
   = render "devise/registrations/short_form" if current_user.nil?
 
   .right.text_right
