--- a/app/views/lessons/show.html.haml
+++ b/app/views/lessons/show.html.haml
@@ -29,19 +29,19 @@
         %p= link_to("Add a video to your lesson >", new_lesson_video_path(@lesson), :class => "lightbox")
         %p= link_to("Add a photo/image/drawing to your lesson >", new_lesson_photo_path(@lesson), :class => "lightbox")
 
-    - @lesson.videos.each do |video|
-      .video
-        %p.small.right= link_to("View&nbsp;larger&nbsp;video&nbsp;>".html_safe, lesson_video_path(@lesson, video), :class => "lightbox")
-        %h4
-          = truncate(video.title, :length => 39)
-        = render "videos/video", :video => video, :size => :medium
-        .small= simple_format(video.caption)
-
-    - @lesson.photos.each do |photo|
-      .photo
-        %h4= photo.title
-        = link_to(image_tag(photo.image.url), lesson_photo_path(@lesson, photo), :class => "lightbox")
-        .small= simple_format(photo.caption)
+    - @lesson.media.each do |media|
+      - if media.is_a?(Video)
+        .video
+          %p.small.right= link_to("View&nbsp;larger&nbsp;video&nbsp;>".html_safe, lesson_video_path(@lesson, media), :class => "lightbox")
+          %h4
+            = truncate(media.title, :length => 39)
+          = render "videos/video", :video => media, :size => :medium
+          .small= simple_format(media.caption)
+      - else
+        .photo
+          %h4= media.title
+          = link_to(image_tag(media.image.url), lesson_photo_path(@lesson, media), :class => "lightbox")
+          .small= simple_format(media.caption)
 
   .lesson_text
     = simple_format(@lesson.body).html_safe
