- tweaking for_students copy

--- a/app/views/about/for_students.html.haml
+++ b/app/views/about/for_students.html.haml
@@ -1,18 +1,13 @@
 - @title = "For Students"
 
-%h2 Built By Students For Students
+%h2
+  Built By Students For Students
+  %span.small
+    (you don't have to be in school to be a student - you just have to be trying to learn)
 
 %p
-  All of the lessons on Upside Down Academy are created by students (as in someone who
-  is trying to learn - you don't have to be in school to be a student) trying to make life
-  easier for their fellow students.
-
-%p
-  Explore thousands of lessons created by people just like you who are trying to
-  make it easier for everyone else to learn.
-
-%p
-  Create your own lessons and help make life a little easier for students all around the world.
+  All of the lessons on Upside Down Academy are created by students trying to make life
+  easier for everyone else.
 
 %p
   Just take what ever you are learning right now and think about how you would try
