- tweaking front page copy

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,7 +4,7 @@
       For Teachers
       %a.toggle_tip.small Learn more >
     .tip_text{:style => "display: none;"}
-      %p.small Every time your students learn something new have them try to teach it to someone else.
+      %p.small Every time your students learn something have them try to teach it to someone else.
       %p.small The transition from "learning" to "teaching" can dramatically impact their learning and engagement.
       %p.small= link_to("Read more >", for_teachers_about_index_path)
   .section.tip
