--- a/app/views/lessons/_form.html.haml
+++ b/app/views/lessons/_form.html.haml
@@ -103,7 +103,7 @@
             %p.small You haven't yet added any photos/images/drawings to your lesson.
           - @lesson.photos.each do |photo|
             .photo_thumbnail
-              = link_to(image_tag(photo.image.url(:small)), photo.image.url(:large), :class => "lightbox")
+              = link_to(image_tag(timestamped(photo.image.url(:small), photo)), photo.image.url(:large), :class => "lightbox")
               = link_to(photo.title, photo.image.url(:large), :class => "lightbox")
               .small= simple_format(truncate(photo.caption, :length => 90))
               .links.small.clear.right
