--- a/app/views/photos/_form.html.haml
+++ b/app/views/photos/_form.html.haml
@@ -1,4 +1,15 @@
-= form_for(@photo, :url => lesson_photos_path(@lesson), :html => {:multipart => true}) do |f|
+= render "layouts/minimal"
+
+:javascript
+  $(function() {
+    $(document.body).find("form").submit(function() {
+      $(this).find(".save_photo").hide();
+      $(this).find(".saving_message").show();
+    })
+  })
+
+
+= form_for(@photo, :url => (@photo.new_record? ? lesson_photos_path(@lesson) : lesson_photo_path(@lesson, @photo)), :method => (@photo.new_record? ? :post : :put), :html => {:multipart => true}) do |f|
   - if @photo.errors.any?
     #error_explanation
       %h3
@@ -22,5 +33,7 @@
       %br
       = f.text_area :caption
   .field
-    %p= f.submit "Add Photo"
+    %p.save_photo= f.submit "Save Photo"
+    %p.saving_message.small{:style => "display: none;"}
+      (saving photo... this may take a little while)
 
