--- a/app/views/videos/_form.html.haml
+++ b/app/views/videos/_form.html.haml
@@ -15,6 +15,14 @@
 
   .field
     %p
+      = f.label :position, "Position relative to other photos & videos:"
+      = f.number_field :position, :size => 2
+      %br
+      %span{:style => "line-height: 1.5em; font-size: smaller"}
+        (a 1 will make it show up before all other photos or videos)      
+
+  .field
+    %p
       = f.label :caption, "The caption for your video:"
       %br
       = f.text_area :caption
