--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -78,6 +78,8 @@
               .really_small
                 \- by
                 = link_to_unless(lesson.user.nil?, lesson_owner(lesson), profile_path(lesson.user))
+          %li= link_to("View all lessons >", lessons_path)
+
       -#
         %td
           %h4 Browse Subjects
