--- a/app/views/lessons/_form.html.haml
+++ b/app/views/lessons/_form.html.haml
@@ -133,6 +133,8 @@
                 = link_to(reference.title, reference.url, :target => "_blank")
                 .small= simple_format(truncate(reference.comment, :length => 90))
                 .links.small.clear.right
+                  = link_to("edit", edit_lesson_reference_path(@lesson, reference), :class => "lightbox")
+                  &nbsp; &nbsp; &nbsp;
                   = link_to("delete", lesson_reference_path(@lesson, reference), :method => :delete, :confirm => "Are you sure you want to delete this reference material?")
 
           = link_to("Add reference material for your lesson", new_lesson_reference_path(@lesson), :class => "lightbox")
