--- a/app/views/lessons/index.html.haml
+++ b/app/views/lessons/index.html.haml
@@ -3,7 +3,7 @@
   %p We are working on more ways to explore and discover new lessons.
   %p For the time being, though, here's a list of all lessons.
 
-%h2 All lessons
+%h2 All Lessons (most recent first)
 
 %ul
   - @lessons.each do |lesson|
