--- a/app/views/references/_form.html.haml
+++ b/app/views/references/_form.html.haml
@@ -17,7 +17,7 @@
     %p
       = f.label :url, "Where can you find this reference material?"
       %br
-      = f.label :title, "Website:"
+      = f.label :url, "Website:"
       = f.text_field :url
   .field
     %p
