--- a/app/assets/stylesheets/lessons.css.sass
+++ b/app/assets/stylesheets/lessons.css.sass
@@ -17,8 +17,9 @@
     .video, .photo
       padding-bottom: 30px
   .references
+    margin: 90px 0 30px 0
+  .references, .lesson_links
     clear: both
-    margin-top: 90px
     border: 1px solid #ccc
     background-color: #eee
     padding: 12px
