--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -3,7 +3,7 @@
 %h2= "#{@user.display_name}'s Lessons"
 
 %ul
-  - @user.lessons.each do |lesson|
+  - @lessons.each do |lesson|
     %li
       = lesson.subject
       - unless lesson.specific_subject.blank?
